src/partials/styles/FAQs.scss
*,
*:after,
*:before {
  box-sizing: border-box;
}
.faqs-body {
  display: flex;
  justify-content: center;
  padding: 7% 0;
//   background-color: #fcfcfc;
//   min-height: 100vh;
  font-size: 16px;
  line-height: 1.4;
  font-family: 'Montserrat', sans-serif;
  color: #fffd;
  box-sizing: border-box;
  overflow-y: scroll;

.accordion {
  width: 100%;
  max-width: 700px;
}
.panel {
  background-color: #0f0f23;
}
.panel__label {
  position: relative;
  display: block;
  width: 100%;
  background: none;
  border: none;
  text-align: left;
  padding: 25px 60px 25px 25px;
  font-weight: 500;
  font-size: 22px;
  font-weight: bold;
  font-family: inherit;
  transition: color 0.2s linear;
  cursor: pointer;
}
.panel__label:focus {
  outline: none;
}
.panel__label:after,
.panel__label:before {
  content: '';
  position: absolute;
  right: 25px;
  top: 50%;
  width: 22px;
  height: 2px;
  margin-top: -2px;
  background-color: #00e0b8;
}
.panel__label:before {
  transform: rotate(-90deg);
  transition: transform 0.35s cubic-bezier(0.65, 0.05, 0.36, 1);
}
.panel[aria-expanded='true'] .panel__content {
  opacity: 1;
}
.panel[aria-expanded='true'] .panel__label {
  color: #00e0b8;
}
.panel[aria-expanded='true'] .panel__label:before {
  transform: rotate(0deg);
}
.panel__inner {
  overflow: hidden;
  will-change: height;
  transition: height 0.4s cubic-bezier(0.65, 0.05, 0.36, 1);
}
.panel__content {
  margin: 5px 25px 25px;
  font-size: 1em;
  color: #fffc;
  opacity: 0;
  transition: opacity 0.3s linear 0.18s;
}
.panel:not(:last-child) {
  margin-bottom: 3px;
}
}

